--- a/CarRentalManagement/Client/CarRentalManagement.Client.csproj
+++ b/CarRentalManagement/Client/CarRentalManagement.Client.csproj
@@ -21,4 +21,10 @@
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Bookings\" />
+    <Folder Include="Pages\Customers\" />
+    <Folder Include="Pages\Vehicles\" />
+  </ItemGroup>
+
 </Project>
