--- a/CarRentalManagement/Server/CarRentalManagement.Server.csproj
+++ b/CarRentalManagement/Server/CarRentalManagement.Server.csproj
@@ -6,12 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Data\Migrations\20221201033507_AddedDefaultUserDataAndUser.cs" />
-    <Compile Remove="Data\Migrations\20221201033507_AddedDefaultUserDataAndUser.Designer.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.13" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
